--- a/public/css/styles-home.css
+++ b/public/css/styles-home.css
@@ -18,6 +18,10 @@ html {
 	box-sizing: border-box;
 }
 
+a{
+	text-decoration: none;
+}
+
 .container {
 	max-width: 1200px;
 	margin: 0 auto;
@@ -95,49 +99,6 @@ html {
 	padding: 1rem 0;
 }
 
-.navbar .fa-bars {
-	display: none;
-}
-
-.menu {
-	display: flex;
-	gap: 2rem;
-}
-
-.menu li {
-	list-style: none;
-}
-
-.menu a {
-	text-decoration: none;
-	font-size: 1.3rem;
-	color: var(--dark-color);
-	font-weight: 600;
-	text-transform: uppercase;
-	position: relative;
-}
-
-.menu a::after {
-	content: '';
-	width: 1.5rem;
-	height: 1px;
-	background-color:  var(--blanco-color);
-	position: absolute;
-	bottom: -3px;
-	left: 50%;
-	transform: translate(-50%, 50%);
-	opacity: 0;
-	transition: all 0.3s ease;
-}
-
-.menu a:hover::after {
-	opacity: 1;
-}
-
-.menu a:hover {
-	color:  var(--blanco-color);
-}
-
 .search-form {
 	position: relative;
 	display: flex;
@@ -145,19 +106,21 @@ html {
 	border: 2px solid  var(--blanco-color);
 	border-radius: 2rem;
 	background-color:  var(--blanco-color);
-	height: 4.4rem;
+	height: 45px;
 	overflow: hidden;
+	width: 100%;
+	justify-content: flex-end;
 }
 
 .search-form input {
 	outline: none;
 	font-family: inherit;
 	border: none;
-	width: 25rem;
-	font-size: 1.4rem;
+	font-size: 18px;
 	padding: 0 2rem;
 	color: #777;
 	cursor: pointer;
+	margin-right: auto;
 }
 
 .search-form input::-webkit-search-cancel-button {
@@ -172,11 +135,13 @@ html {
 	justify-content: center;
 	height: 100%;
 	padding: 1rem;
+	
 }
 
 .btn-search i {
 	font-size: 2rem;
 	color:  var(--blanco-color);
+	
 }
 
 /*Categorias*/
@@ -192,7 +157,7 @@ html {
 	display: flex;
 	flex-direction: column;
 	gap: 2rem;
-	margin-bottom: 3rem;
+	margin-bottom: 18px;
 }
 
 .container-categories {
@@ -214,8 +179,6 @@ html {
 .category-verduras {
 	background-image: linear-gradient(#00000080, #00000080),
 		url('../img/frutas.jpg');
-		
-
 	background-size: cover;
 	background-position: bottom;
 	background-repeat: no-repeat;
@@ -277,7 +240,7 @@ html {
 
 .cards-cuerpo{
 	width: 200px;
-	height: 350px;
+	height: 370px;
 	position: relative;
 	box-shadow: 0 4px 4px black;
 	border-radius: 8px;
@@ -444,25 +407,21 @@ hr{
 
 /*Responsive*/
 
-@media (max-width: 768px) {
+@media (max-width: 1210px) {
 	html {
 		font-size: 55%;
 	}
 
 	.header {
-		padding: 2rem;
+		padding: 2.5rem;
 	}
 
 	.customer-support {
 		display: none;
 	}
 
-	.content-shopping-cart {
-		display: none;
-	}
-
 	.navbar {
-		padding: 1rem 2rem;
+		padding: 1rem 3rem;
 	}
 
 	.form{
@@ -481,10 +440,6 @@ hr{
 		display: none;
 	}
 
-	.heading-1 {
-		font-size: 2.4rem;
-	}
-
 	.card-category {
 		height: 12rem;
 	}
@@ -498,17 +453,11 @@ hr{
 	.card-category span {
 		font-size: 1.4rem;
 	}
-
-
 }
 
 @media (max-width: 468px) {
 	html {
 		font-size: 42.5%;
-	}
-	
-	.heading-1 {
-		font-size: 2.8rem;
 	}
 
 }
@@ -661,6 +610,17 @@ hr{
 	width: 400px;
 }
 
+.contenedor-formP select{
+	border: 1px solid var(--color-secundario);
+	font-size: 17px;
+	width: 400px;
+}
+
+.contenedor-formP button{
+	font-size: 14px;
+	margin: 10px;
+}
+
 .contenedor-formP label{
 	font-size: 14px;
 	margin-bottom: 10px;
@@ -670,6 +630,7 @@ hr{
 	font-size: 14px;
 	margin: 10px;
 }
+
 
 table {
 	font-size: 14px;
@@ -682,7 +643,6 @@ table button i{
 
 
 /**** Comprar ****/
-
 
 .contenedor-compra{
     padding-left: 5%;
@@ -790,4 +750,58 @@ table button i{
 
 .result .text{
     text-align: right;
+}
+
+/*Usuario modelos*/
+
+.row2{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);    
+    grid-gap: 30px;
+}
+
+.service{
+    text-align: center;
+    padding: 25px 10px;
+    border-radius: 5px;
+    font-size: 14px;
+    cursor: pointer;
+    background: transparent;
+    box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2);
+    transition: transform 0.5s, background 0.5s;
+}
+
+.service i{
+    font-size: 40px;
+    margin-trim: 10px;
+    color: var(--color-primario);
+}
+
+.service h2{
+    font-weight: 600;
+	margin: 5px 8px;
+}
+
+.service:hover{
+    background: var(--color-secundario);
+    color: var(--blanco-color);
+    transform: scale(1.05);
+}
+
+.service:hover i{
+    color: #fdfdfd;
+}
+
+.content_box .content{
+    display: none;
+}
+
+
+.content_box .content.active{
+    display: block;
+    margin-top: 30px;
+}
+
+.content_box .content h2{
+    margin-bottom: 10px;
 }
