--- a/public/css/styles-home.css
+++ b/public/css/styles-home.css
@@ -5,6 +5,7 @@
 	--color-secundario: #1C3E2C;
 	--blanco-color: #FCFDFA;
 	--negro-color: #151515;
+    --naranja-color: #F17F34;
 }
 
 html {
@@ -118,6 +119,7 @@ a{
 	border: none;
 	font-size: 18px;
 	padding: 0 2rem;
+    width: 100%;
 	color: #777;
 	cursor: pointer;
 	margin-right: auto;
@@ -212,85 +214,113 @@ a{
 /*Categorias*/
 
 .heading-1 {
-	margin-top: 20px;
+	margin: 20px 0px;
 	text-align: center;
 	font-weight: 500;
 	font-size: 3rem;
 }
 
-.top-categories {
-	display: flex;
-	flex-direction: column;
-	gap: 2rem;
-	margin-bottom: 18px;
+.carrusel{
+    width: 100%;
 }
 
-.container-categories {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	gap: 3rem;
+.carrusel h2{
+    font-size: 26px;
+    line-height: 38px;
+    padding-bottom: 24px;
+    opacity: .9;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    text-align: center;
 }
 
-.card-category {
-	height: 20rem;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	border-radius: 2rem;
-	gap: 2rem;
+.categorias-list{
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    height: 275px;
+    padding: 10px 0px;
+    margin: 0px auto;
+    max-width: 90vw;
+    overflow: hidden;
 }
 
-.category-verduras {
-	background-image: linear-gradient(#00000080, #00000080),
-		url('../img/frutas.jpg');
-	background-size: cover;
-	background-position: bottom;
-	background-repeat: no-repeat;
+.categorias-deslizar{
+    position: relative;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    transition: .5s ease-in-out;
 }
 
-.category-frutas {
-	background-image: linear-gradient(#00000080, #00000080),
-		url('../img/frutas.jpg');
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
+.categoria{
+    position: relative;
+    width: 305px;
+    padding: 0 18px;
+    float: left;
+    box-sizing: border-box;
+    display: flex;
+    height: 100%;
 }
 
-.category-granos {
-	background-image: linear-gradient(#00000080, #00000080),
-		url('../img/granos.jpg');
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
+.categoria h4{
+    position: absolute;
+    z-index: 1;
+    font-size: 22px;
+    line-height: 23px;
+    color: var(--blanco-color);
+    padding: 15px;
 }
 
-.card-category p {
-	font-size: 2.5rem;
-	color:  var(--blanco-color);
-	text-transform: capitalize;
-	position: relative;
+.categoria h4 small{
+    font-size: 15px;
+    display: block;
 }
 
-.card-category p::after {
-	content: '';
-	width: 2.5rem;
-	height: 2px;
-	background-color:  var(--blanco-color);
-	position: absolute;
-	bottom: -1rem;
-	left: 50%;
-	transform: translate(-50%, 50%);
+.categoria a img{
+    object-fit: cover;
+    height: 275px;
+    width: 100%;
+    border-radius: 4px;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.5);
+    transition: .3s ease-in-out;
 }
 
-.card-category span {
-	font-size: 1.6rem;
-	color:  var(--blanco-color);
-	cursor: pointer;
+.categoria a img:hover{
+    opacity: .85;
 }
 
-.card-category span:hover {
-	color: var(--color-primario);
+.flecha{
+    border-radius: 30px;
+    background-color: var(--blanco-color);
+    position: absolute;
+    z-index: 4;
+    width: 48px;
+    height: 48px;
+    text-align: center;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.15);
+    border: 0;
+    cursor: pointer;
+}
+
+.flecha:focus{
+    outline: 0;
+}
+
+.flecha svg{
+    width: 12px;
+    height: 100%;
+    color: rgba(0,0,0,.7);
+}
+
+.izquierda{
+    left: 0px;
+}
+
+.derecha{
+    right: 0px;
 }
 
 /*Cards*/
@@ -470,62 +500,6 @@ hr{
 }
 
 
-/*Responsive*/
-
-@media (max-width: 1210px) {
-	html {
-		font-size: 55%;
-	}
-
-	.header {
-		padding: 2.5rem;
-	}
-
-	.customer-support {
-		display: none;
-	}
-
-	.navbar {
-		padding: 1rem 3rem;
-	}
-
-	.form{
-        width: 90%;
-        grid-template-columns: repeat(1,1fr);
-        grid-gap: 50px;
-    }
-
-	.navbar .fa-bars {
-		display: block;
-		color:  var(--blanco-color);
-		font-size: 3rem;
-	}
-
-	.menu {
-		display: none;
-	}
-
-	.card-category {
-		height: 12rem;
-	}
-
-	.card-category p {
-		font-size: 2rem;
-		text-align: center;
-		line-height: 1;
-	}
-
-	.card-category span {
-		font-size: 1.4rem;
-	}
-}
-
-@media (max-width: 468px) {
-	html {
-		font-size: 42.5%;
-	}
-
-}
 
 /**** Usuario apartado ****/
 
@@ -646,10 +620,10 @@ hr{
 }
 
 .btn-usuario{
-	margin: 20px;
+    margin: 20px;
 }
 
-.btn-usuario a{
+.btn-usuario button{
     text-decoration: none;
     padding: 9px 40px;
     font-family: Monda;
@@ -662,7 +636,7 @@ hr{
 }
 
 .contenedor-formP{
-	justify-content: center;
+    justify-content: center;
     align-items: center;
     display: flex;
     flex-wrap: wrap;
@@ -670,40 +644,40 @@ hr{
 }
 
 .contenedor-formP input{
-	border: 1px solid var(--color-secundario);
+    border: 1px solid var(--color-secundario);
 	font-size: 17px;
 	width: 400px;
 }
 
 .contenedor-formP select{
-	border: 1px solid var(--color-secundario);
+    border: 1px solid var(--color-secundario);
 	font-size: 17px;
 	width: 400px;
 }
 
 .contenedor-formP button{
-	font-size: 14px;
+    font-size: 14px;
 	margin: 10px;
 }
 
 .contenedor-formP label{
-	font-size: 14px;
+    font-size: 14px;
 	margin-bottom: 10px;
 }
 
 .contenedor-formP button{
-	font-size: 14px;
+    font-size: 14px;
 	margin: 10px;
 }
 
 
 table {
-	font-size: 14px;
+    font-size: 14px;
 	margin: 20px 0px;
 }
 
 table button i{
-	font-size: 15px;
+    font-size: 15px;
 }
 
 
@@ -736,7 +710,7 @@ table button i{
 }
 
 .form2 p{
-	color:  var(--blanco-color);
+    color:  var(--blanco-color);
     font-size: 17px;
     line-height: 1.6;
     margin-bottom: 10px;
@@ -821,11 +795,13 @@ table button i{
 
 .row2{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);    
+    grid-template-columns: repeat(2, 1fr);    
     grid-gap: 30px;
 }
 
 .service{
+    width: 300px;
+    margin: auto;
     text-align: center;
     padding: 25px 10px;
     border-radius: 5px;
@@ -869,4 +845,60 @@ table button i{
 
 .content_box .content h2{
     margin-bottom: 10px;
+}
+
+/*Responsive*/
+
+@media (max-width: 1210px) {
+
+    .header {
+        padding: 2.5rem;
+    }
+
+    .customer-support {
+        display: none;
+    }
+
+    .navbar {
+        padding: 1rem 3rem;
+    }
+
+    .form{
+        width: 90%;
+        grid-template-columns: repeat(1,1fr);
+        grid-gap: 50px;
+    }
+
+    .navbar .fa-bars {
+        display: block;
+        color:  var(--blanco-color);
+        font-size: 3rem;
+    }
+
+    .menu {
+        display: none;
+    }
+
+    .card-category {
+        height: 12rem;
+    }
+
+    .card-category p {
+        font-size: 2rem;
+        text-align: center;
+        line-height: 1;
+    }
+
+    .card-category span {
+        font-size: 1.4rem;
+    }
+}
+
+@media (max-width: 658px) {
+    .row2{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);    
+        grid-gap: 30px;
+    }
+
 }
