--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -117,7 +117,7 @@ header{
     align-items: center;
     display: flex;
     flex-wrap: wrap;
-    padding-top: 20px;
+    padding: 20px;
 }
 
 .wrap-login {
@@ -125,10 +125,9 @@ header{
     background: #eceff18c;
     border-radius: 20px;
     overflow: hidden;
-    padding: 10px 55px 40px 55px;
+    padding: 10px 55px 30px 55px;
     box-shadow: 25px 40px 28px 0px rgba(0, 0, 0, 0.38);
 }
-
 
 /*Formulario de user y password*/
 
@@ -136,8 +135,20 @@ header{
     width: 100%;
 }
 
-
 /*Input*/
+
+.form-select{
+    font-family: "Barlow", sans-serif;
+    font-weight: 700;
+    font-size: 15px;
+    border: none;
+    color: black;
+    line-height: 1.2;
+    display: block;
+    width: 100%;
+    height: 45px;
+    background: transparent;
+}
 
 .wrap-input100 {
     width: 100%;
@@ -243,7 +254,6 @@ header{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding-top: 13px;
 }
 
 .wrap-login-form-btn {
@@ -308,3 +318,37 @@ header{
 .content_box .content h2{
     margin-bottom: 10px;
 }
+
+.custum-file-upload {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 25px;
+    height: 50px;
+    width: 250px;
+    display: flex;
+    align-items: space-between;
+    gap: 20px;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    border: 2px dashed var(--negro-color);
+    background-color: transparent;
+    padding: 1.5rem;
+    border-radius: 10px;
+  }
+  
+  .custum-file-upload .text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .custum-file-upload .text span {
+    text-align: center;
+    font-weight: 600;
+    color: var(--negro-color);
+  }
+  
+  .custum-file-upload input {
+    display: none;
+  }
