--- a/public/css/appbarfree.css
+++ b/public/css/appbarfree.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-html {
-	font-size: 62.5%;
-	font-family: "Barlow", sans-serif;
+:root {
+    --color-primario: #6BBB43;
+    --color-secundario: #1C3E2C;
+    --blanco-color: #FCFDFA;
+    --negro-color: #151515;
+    --naranja-color: #F17F34;
 }
 
 * {
@@ -11,18 +14,14 @@ html {
 	box-sizing: border-box;
 }
 
+a{
+	text-decoration: none;
+}
+
 .container {
 	max-width: 1200px;
 	margin: 0 auto;
 }
-
-:root {
-	--color-primario: #6BBB43;
-	--color-secundario: #1C3E2C;
-	--blanco-color: #FCFDFA;
-	--negro-color: #151515;
-}
-
 
 input {
 	outline: none;
@@ -83,7 +82,7 @@ header{
 
 .header .btn a:hover{
     background-color: white;
-    color: #6BBB43;
+    color: var(--color-primario);
     transform: scale(1.1);
 }
 
@@ -113,7 +112,7 @@ header{
 	margin: 20px 0px;
 	text-align: center;
 	font-weight: 500;
-	font-size: 3rem;
+	font-size: 30px;
 }
 
 .carrusel{
@@ -153,7 +152,7 @@ header{
 
 .categoria{
     position: relative;
-    width: 100%;
+    width: 300px;
     padding: 0 18px;
     float: left;
     box-sizing: border-box;
@@ -161,12 +160,13 @@ header{
     height: 100%;
 }
 
+
 .categoria h4{
     position: absolute;
     z-index: 1;
     font-size: 22px;
     line-height: 23px;
-    color: var(--blanco-color);
+    color: var(--color-primario);
     padding: 15px;
 }
 
@@ -181,11 +181,10 @@ header{
     width: 100%;
     border-radius: 4px;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,.5);
-    transition: .3s ease-in-out;
 }
 
 .categoria a img:hover{
-    opacity: .85;
+    background: rgba(0,0,0,.5);
 }
 
 .flecha{
@@ -231,7 +230,7 @@ header{
 
 .cards-cuerpo{
 	width: 200px;
-	height: 370px;
+	height: 375px;
 	position: relative;
 	box-shadow: 0 4px 4px black;
 	border-radius: 8px;
@@ -260,7 +259,7 @@ header{
 	font-size: 18px;
 	color: var(--color-secundario);
 	letter-spacing: 1px;
-	padding: 8px;
+    padding: 10px 10px 0px 10px;
 }
 
 .cards-cuerpo h3{
@@ -276,7 +275,6 @@ header{
 	color: var(--negro-color);
 	padding-left: 10px;
 }
-
 
 .cards-cuerpo button{
 	position: absolute;
@@ -370,7 +368,6 @@ header{
 .form .btn-enviar:hover{
     background: var(--color-secundario);
 }
-
 
 hr{
     margin-top: 20px;
