--- a/public/css/styles-home.css
+++ b/public/css/styles-home.css
@@ -8,15 +8,11 @@
     --naranja-color: #F17F34;
 }
 
-html {
-	font-size: 62.5%;
-	font-family: "Barlow", sans-serif;
-}
-
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+    
 }
 
 a{
@@ -30,31 +26,31 @@ a{
 
 /*Header*/
 
-.container-header {
-	background-color: rgb(36, 33, 33);
-}
-
-.header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 2rem 0;
+header{
+    background-color: rgb(36, 33, 33);
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 75px;
+    padding: 5px 10%;
 }
 
 .container-logo {
 	display: flex;
 	align-items: center;
 	gap: 0.5rem;
+    margin-right: auto;
 }
 
-.container-logo h1 {
+.container-logo h1 a {
 	text-decoration: none;
 	color: var(--blanco-color);
-	font-size: 28px;
-	margin-right: auto;
+	font-size: 35px;
+	text-transform: uppercase;
+	letter-spacing: -1px;
 }
 
-.container-logo h1 b{
+.container-logo h1 a b{
 	color: var(--color-primario);
 }
 
@@ -65,16 +61,16 @@ a{
 }
 
 .container-user .fa-user {
-	font-size: 3rem;
+	font-size: 30px;
 	color: var(--color-primario);
-	padding-right: 2.5rem;
+	padding-right: 30px;
 	border-right: 1px solid #e2e2e2;
 }
 
 .container-user .fa-basket-shopping {
-	font-size: 3rem;
+	font-size: 30px;
 	color: var(--color-primario);
-	padding-left: 1rem;
+	padding-left: 10px;
 }
 
 .content-shopping-cart {
@@ -84,7 +80,7 @@ a{
 
 .content-shopping-cart span {
 	color: var(--blanco-color);
-	font-size: 12px;
+	font-size: 13px;
 }
 
 /*Navbar*/
@@ -151,7 +147,7 @@ a{
 .go-contact-container {
     position: fixed;
     bottom: 4rem;
-    right: 4rem;
+    right: 20px;
     width: 6.6rem;
     height: 6.6rem;
     z-index: -1;
@@ -187,8 +183,8 @@ a{
  
 .show .go-contact-button {
     animation: popup 0.3s ease-in-out;
-    width: 6.6rem;
-    height: 6.6rem;
+    width: 70px;
+    height: 70px;
     z-index: 11;
 }
  
@@ -217,7 +213,7 @@ a{
 	margin: 20px 0px;
 	text-align: center;
 	font-weight: 500;
-	font-size: 3rem;
+	font-size: 30px;
 }
 
 .carrusel{
@@ -257,7 +253,7 @@ a{
 
 .categoria{
     position: relative;
-    width: 305px;
+    width: 300px;
     padding: 0 18px;
     float: left;
     box-sizing: border-box;
@@ -335,7 +331,7 @@ a{
 
 .cards-cuerpo{
 	width: 200px;
-	height: 370px;
+	height: 375px;
 	position: relative;
 	box-shadow: 0 4px 4px black;
 	border-radius: 8px;
@@ -364,7 +360,7 @@ a{
 	font-size: 18px;
 	color: var(--color-secundario);
 	letter-spacing: 1px;
-	padding: 8px;
+    padding: 10px 10px 0px 10px;
 }
 
 .cards-cuerpo h3{
@@ -380,7 +376,6 @@ a{
 	color: var(--negro-color);
 	padding-left: 10px;
 }
-
 
 .cards-cuerpo button{
 	position: absolute;
@@ -475,7 +470,6 @@ a{
     background: var(--color-secundario);
 }
 
-
 hr{
     margin-top: 20px;
     border: none;
@@ -486,6 +480,7 @@ hr{
 
 .pie-pagina{
     width: 100%;
+    margin: 0;
 }
 
 .pie-pagina .grupo-2{
@@ -498,8 +493,6 @@ hr{
 .pie-pagina .grupo-2 small{
     font-size: 15px;
 }
-
-
 
 /**** Usuario apartado ****/
 
@@ -522,7 +515,7 @@ hr{
     display: block;
     position: relative;
     width: 90%;
-    height: 17rem;
+    height: 200px;
     background-image: linear-gradient(45deg, #1c3e2c, #6bbb43);
     border-radius: 0 0 20px 20px;
 }
@@ -533,8 +526,8 @@ hr{
 
 .seccion-perfil-usuario .perfil-usuario-avatar {
     display: flex;
-    width: 180px;
-    height: 180px;
+    width: 200px;
+    height: 200px;
     align-items: center;
     justify-content: center;
     border: 7px solid  var(--blanco-color);
@@ -554,19 +547,6 @@ hr{
     border-radius: 50%;
 }
 
-.seccion-perfil-usuario .perfil-usuario-avatar .boton-avatar {
-    position: absolute;
-    left: -2px;
-    top: -2px;
-    border: 0;
-    background-color:  var(--blanco-color);
-    box-shadow: 0 0 12px rgba(0, 0, 0, .2);
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
-    cursor: pointer;
-}
-
 .seccion-perfil-usuario .perfil-usuario-body {
     width: 70%;
     position: relative;
@@ -576,7 +556,7 @@ hr{
 .seccion-perfil-usuario .perfil-usuario-body .titulo {
     display: block;
     width: 100%;
-    font-size: 1.75em;
+    font-size: 20px;
     margin-bottom: 0.5rem;
 }
 
@@ -800,12 +780,11 @@ table button i{
 }
 
 .service{
-    width: 300px;
+    width: 250px;
     margin: auto;
     text-align: center;
     padding: 25px 10px;
     border-radius: 5px;
-    font-size: 14px;
     cursor: pointer;
     background: transparent;
     box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2);
@@ -819,8 +798,8 @@ table button i{
 }
 
 .service h2{
-    font-weight: 600;
-	margin: 5px 8px;
+    font-size: 25px;
+	margin: 10px 8px;
 }
 
 .service:hover{
@@ -846,12 +825,23 @@ table button i{
     margin-bottom: 10px;
 }
 
+/*Carrito*/
+
+.cantidad {
+    padding: 5px 10px;
+    display: inline-block;
+    min-width: 30px;
+    text-align: center;
+}
+
+
+
 /*Responsive*/
 
 @media (max-width: 1210px) {
 
     .header {
-        padding: 2.5rem;
+        padding: 20px;
     }
 
     .customer-support {
