--- a/public/css/appbarfree.css
+++ b/public/css/appbarfree.css
@@ -166,7 +166,7 @@ header{
     z-index: 1;
     font-size: 22px;
     line-height: 23px;
-    color: var(--color-primario);
+    color: var(--blanco-color);
     padding: 15px;
 }
 
