--- a/public/css/appbarfree.css
+++ b/public/css/appbarfree.css
@@ -105,7 +105,25 @@ header{
     color: white;
     transform: scale(1.1);
 }
+.header .btn-salir button{
+    font-size: 15px;
+    text-decoration: none;
+    font-weight: 700;
+    color: #6BBB43;
+    margin-left: 25px;
+    padding: 9px 25px;
+    background-color: white;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
 
+.header .btn-salir button:hover{
+    background-color: #1C3E2C;
+    color: white;
+    transform: scale(1.1);
+}
 /*Categorias*/
 
 .heading-1 {
