--- a/public/css/styles-home.css
+++ b/public/css/styles-home.css
@@ -439,6 +439,10 @@ header{
     margin: 10px;
 }
 
+.form form .campo-1{
+    display: none;
+}
+
 .form form .campo, textarea{
     width: 100%;
     padding: 15px 10px;
@@ -662,6 +666,12 @@ table button i{
 
 /*Usuario modelos*/
 
+.row1{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);    
+    grid-gap: 30px;
+}
+
 .row2{
     display: grid;
     grid-template-columns: repeat(3, 1fr);    
@@ -723,6 +733,116 @@ table button i{
     text-align: center;
 }
 
+/**** Comprar ****/
+
+.contenedor-compra{
+    padding-left: 5%;
+    padding-right: 5%;
+    box-sizing: border-box;
+    overflow: hidden;
+    margin: 3%;
+    background: #131f19;
+}
+
+.form2{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-gap: 50px;
+    margin-top: 20px;
+}
+.contenedor-compra h1{
+    color:  var(--blanco-color);
+    margin-top: 12px;
+}
+
+.form2 h1{
+    color:  var(--blanco-color);
+    margin-top: 12px;
+}
+
+.form2 p{
+    color:  var(--blanco-color);
+    font-size: 17px;
+    line-height: 1.6;
+    margin-bottom: 10px;
+}
+
+.form2 .campo{
+    width: 100%;
+    padding: 10px 10px;
+    background: var(--color-secundario);
+    font-size: 15px;
+    border: 1px solid var(--blanco-color);
+    margin-bottom: 20px;
+    border-radius: 3px;
+    outline: 0px;
+}
+
+.form2 .btn-enviar{
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 3px;
+    cursor: pointer;
+    background: transparent;
+    transition: transform 0.5s, background 0.5s;
+    border-color: var(--blanco-color);
+    color: var(--blanco-color);
+	margin-bottom: 20px;
+}
+
+.form2 .btn-enviar:hover{
+    background: var(--color-primario);
+}
+
+.form2 input{
+    color: var(--blanco-color);
+    text-align: left;
+}
+
+.row3{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);    
+    grid-gap: 30px;
+    margin: 10px 0 20px 0;
+}
+
+.pago{
+    text-align: center;
+    border-radius: 5px;
+    font-size: 9px;
+    cursor: pointer;
+    background: transparent;
+    transition: transform 0.5s, background 0.5s;
+    border-color: var(--blanco-color);
+}
+
+.pago h3{
+    color: var(--blanco-color);
+}
+
+.pago:hover{
+    border-color: var(--color-secundario);
+    background: var(--color-primario);
+    transform: scale(1.05);
+}
+
+.result{
+    width: 96%;
+    color: var(--blanco-color);
+    font-size: 25px;
+    background-color: var(--color-secundario);
+    display: grid;  
+    padding: 10%;
+    margin-right: 50vh;
+    text-align: center;
+	margin-bottom: 50px;
+}
+
+.result .text{
+    text-align: right;
+}
+
 /*Responsive*/
 
 @media (max-width: 1210px) {
@@ -770,8 +890,19 @@ table button i{
     }
 }
 
-@media (max-width: 658px) {
+@media (max-width: 820px) {
+
     .row2{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);    
+        grid-gap: 30px;
+    }
+
+}
+
+@media (max-width: 658px) {
+
+    .row1{
         display: grid;
         grid-template-columns: repeat(1, 1fr);    
         grid-gap: 30px;
