--- a/public/css/styles-home.css
+++ b/public/css/styles-home.css
@@ -67,7 +67,7 @@ header{
 	border-right: 1px solid #e2e2e2;
 }
 
-.container-user .fa-basket-shopping {
+.container-user .fa-cart-shopping {
 	font-size: 30px;
 	color: var(--color-primario);
 	padding-left: 10px;
@@ -142,71 +142,6 @@ header{
 	
 }
 
-/* GOTOP */
- 
-.go-contact-container {
-    position: fixed;
-    bottom: 4rem;
-    right: 20px;
-    width: 6.6rem;
-    height: 6.6rem;
-    z-index: -1;
-}
- 
-.go-contact-button {
-    width: 0rem;
-    height: 0rem;
-    background: var(--color-primario);
-    border-radius: 50%;
-    cursor: pointer;
-    transition: 0.2s;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: -1;
-}
- 
-.go-contact-button i {
-    position: absolute;
-    font-size: 30px;
-    top: 48%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    color: var(--blanco-color);
-    transition: 0.2s;
-}
- 
-.show {
-    z-index: 10;
-}
- 
-.show .go-contact-button {
-    animation: popup 0.3s ease-in-out;
-    width: 70px;
-    height: 70px;
-    z-index: 11;
-}
- 
-.show i {
-    transform: translate(-50%, -50%) scale(1);
-}
- 
-@keyframes popup {
-    0% {
-        width: 0;
-        height: 0;
-    }
-    50% {
-        width: 8rem;
-        height: 8rem;
-    }
-    100% {
-        width: 6.6rem;
-        height: 6.6rem;
-    }
-}
-
 /*Categorias*/
 
 .heading-1 {
@@ -253,7 +188,7 @@ header{
 
 .categoria{
     position: relative;
-    width: 300px;
+    width: 307px;
     padding: 0 18px;
     float: left;
     box-sizing: border-box;
@@ -481,7 +416,7 @@ hr{
     border: none;
     width: 90%;
     height: 2px;
-    background: var(--color-primario);
+    background: var(--negro-color);
 }
 
 .pie-pagina{
@@ -676,12 +611,12 @@ table button i{
 
 .row2{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);    
+    grid-template-columns: repeat(4, 1fr);    
     grid-gap: 30px;
 }
 
 .service{
-    width: 250px;
+    width: 200px;
     margin: auto;
     text-align: center;
     padding: 25px 10px;
@@ -802,6 +737,11 @@ table button i{
     text-align: left;
 }
 
+.form2 select{
+    color: var(--blanco-color);
+    text-align: left;
+}
+
 .row3{
     display: grid;
     grid-template-columns: repeat(1, 1fr);    
@@ -863,7 +803,7 @@ table button i{
 
     .form{
         width: 90%;
-        grid-template-columns: repeat(1,1fr);
+        grid-template-columns: repeat(1, 1fr);
         grid-gap: 50px;
     }
 
@@ -892,11 +832,11 @@ table button i{
     }
 }
 
-@media (max-width: 820px) {
+@media (max-width: 920px) {
 
     .row2{
         display: grid;
-        grid-template-columns: repeat(1, 1fr);    
+        grid-template-columns: repeat(2, 1fr);    
         grid-gap: 30px;
     }
 
@@ -920,10 +860,4 @@ table button i{
     margin: 0 10px; 
     background-color: var(--negro-color);
     color: #ffff;
-}
-
-/*modal*/
-
-.btn{
-    color: var(--color-secundario);
 }
