--- a/public/css/appbarfree.css
+++ b/public/css/appbarfree.css
@@ -86,6 +86,7 @@ header{
     transform: scale(1.1);
 }
 
+
 .header .btn-register a{
     font-size: 15px;
     text-decoration: none;
@@ -105,6 +106,7 @@ header{
     color: white;
     transform: scale(1.1);
 }
+
 .header .btn-salir button{
     font-size: 15px;
     text-decoration: none;
@@ -124,6 +126,33 @@ header{
     color: white;
     transform: scale(1.1);
 }
+
+@media (max-width: 658px) {
+
+    .container-logo h1 a {
+        font-size: 25px;
+    }
+
+    .header .btn a{
+        font-size: 12px;
+        font-weight: 700;
+        padding: 7px 15px;
+    }
+
+    .header .btn-register a{
+        font-size: 12px;
+        font-weight: 700;
+        padding: 7px 15px;
+    }
+
+    .header .btn-salir button{
+        font-size: 12px;
+        font-weight: 700;
+        padding: 7px 10px;
+    }
+
+}
+
 /*Categorias*/
 
 .heading-1 {
