--- a/public/css/appbarfree.css
+++ b/public/css/appbarfree.css
@@ -65,11 +65,13 @@ header{
 .container-logo h1 a b{
 	color: var(--color-primario);
 }
+
 .container-user {
 	display: flex;
 	gap: 1rem;
 	cursor: pointer;
 }
+
 .container-user .fa-cart-shopping {
 	font-size: 30px;
 	color: var(--color-primario);
@@ -85,12 +87,12 @@ header{
 	color: var(--blanco-color);
 	font-size: 13px;
 }
+
 .header .btn a{
     font-size: 15px;
     text-decoration: none;
     font-weight: 700;
     color: white;
-    margin-left: 25px;
     padding: 9px 25px;
     background-color: #6BBB43;
     border: none;
@@ -111,7 +113,6 @@ header{
     text-decoration: none;
     font-weight: 700;
     color: #6BBB43;
-    margin-left: 25px;
     padding: 9px 25px;
     background-color: white;
     border: none;
@@ -144,32 +145,6 @@ header{
     background-color: #1C3E2C;
     color: white;
     transform: scale(1.1);
-}
-
-@media (max-width: 658px) {
-
-    .container-logo h1 a {
-        font-size: 25px;
-    }
-
-    .header .btn a{
-        font-size: 12px;
-        font-weight: 700;
-        padding: 7px 15px;
-    }
-
-    .header .btn-register a{
-        font-size: 12px;
-        font-weight: 700;
-        padding: 7px 15px;
-    }
-
-    .header .btn-salir button{
-        font-size: 12px;
-        font-weight: 700;
-        padding: 7px 10px;
-    }
-
 }
 
 /*Categorias*/
@@ -457,4 +432,69 @@ hr{
 
 .pie-pagina .grupo-2 small{
     font-size: 15px;
+}
+
+@media (max-width: 658px) {
+
+    .container-logo h1 a {
+        font-size: 27px;
+    }
+
+    .header .btn a{
+        font-size: 13px;
+        font-weight: 700;
+        padding: 7px 15px;
+    }
+
+    .header .btn-register a{
+        font-size: 13px;
+        font-weight: 700;
+        padding: 7px 15px;
+    }
+
+    .header .btn-salir button{
+        font-size: 13px;
+        font-weight: 700;
+        padding: 7px 10px;
+    }
+
+    .form{
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 50px;
+    }
+
+}
+
+@media (max-width: 390px) {
+
+    .form{
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 50px;
+    }
+
+    header{
+        padding: 10px ;
+    }
+
+    .container-logo h1 a {
+        font-size: 25px;
+    }
+
+    .header .btn-salir button{
+        font-size: 10px;
+        font-weight: 700;
+        padding: 7px 10px;
+    }
+
+    .header .btn a{
+        font-size: 10px;
+        font-weight: 700;
+    }
+    
+    .header .btn-register a{
+        font-size: 10px;
+        font-weight: 700;
+    }
 }
